--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "homepage": "https://dorotea.co"
     }],
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "doroteati/mia-core-mezzio": "dev-main",
         "doroteati/mia-eloquent-mezzio": "dev-main",
         "doroteati/mia-auth-mezzio": "dev-main"
